Added Project pictures

--- a/projects.html
+++ b/projects.html
@@ -1,1 +1,55 @@
-
+<html lang="en"></html>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FRESH TECH - Projects</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="about.html">About</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section class="projects">
+            <h1>Our Projects</h1>
+            <div class="project-list">
+                <div class="project-item">
+                    <img src="Project images/p1pexels-fauxels-3184286.jpg" alt="Project 1">
+                    <h2>Project One</h2>
+                    <p>This project involved innovative design and collaboration.</p>
+                </div>
+                <div class="project-item">
+                    <img src="Project images/p2pexels-max-fischer-5212323.jpg" alt="Project 2">
+                    <h2>Project Two</h2>
+                    <p>The second project showcased our ability to adapt and excel.</p>
+                </div>
+                <div class="project-item">
+                    <img src="Project images/p3pexels-fauxels-3184423.jpg" alt="Project 3">
+                    <h2>Project Three</h2>
+                    <p>This project was a major milestone for our team.</p>
+                </div>
+                <div class="project-item">
+                    <img src="project4.jpg" alt="Project 4">
+                    <h2>Project Four</h2>
+                    <p>A brief description of Project Four. This project highlighted our technical skills.</p>
+                </div>
+                <div class="project-item">
+                    <img src="project5.jpg" alt="Project 5">
+                    <h2>Project Five</h2>
+                    <p>A brief description of Project Five. It was a collaborative effort that achieved great results.</p>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2023 Your Company</p>
+    </footer>
+    <script src="script.js"></script>
+</body>
+</html>
